--- a/turbo.json
+++ b/turbo.json
@@ -46,11 +46,19 @@
     }
   },
   "globalEnv": [
+    "GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET",
+    "BETTER_AUTH_SECRET",
+    "GOOGLE_GENERATIVE_AI_API_KEY",
+    "APPLE_KEY_ID",
+    "APPLE_TEAM_ID",
+    "APPLE_PRIVATE_KEY",
+    "APPLE_BUNDLE_ID",
+    "APPLE_SERVICE_ID",
+    "BETTER_AUTH_URL",
     "DATABASE_URL",
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
-    "AUTH_REDIRECT_PROXY_URL",
-    "AUTH_SECRET",
+    "DISCORD_CLIENT_ID",
+    "DISCORD_CLIENT_SECRET",
     "PORT"
   ],
   "globalPassThroughEnv": [
