--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -38,5 +38,5 @@
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@flatsby/prettier-config"
 }
