--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -26,14 +26,14 @@
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
     "better-auth": "catalog:",
-    "geist": "^1.3.1",
-    "jose": "^6.0.10",
+    "geist": "^1.5.1",
+    "jose": "^6.1.3",
     "next": "catalog:",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "react-intersection-observer": "^9.16.0",
     "react-swipeable-list": "^1.10.0",
-    "superjson": "2.2.2",
+    "superjson": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
@@ -41,7 +41,7 @@
     "@flatsby/prettier-config": "workspace:*",
     "@flatsby/tailwind-config": "workspace:*",
     "@flatsby/tsconfig": "workspace:*",
-    "@types/node": "^22.14.1",
+    "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
     "dotenv-cli": "^8.0.0",
