--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,7 +26,7 @@
     "@flatsby/validators": "workspace:*",
     "@trpc/server": "catalog:",
     "effect": "^3.17.0",
-    "superjson": "2.2.2",
+    "superjson": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
