--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,37 +5,40 @@ packages:
 
 catalog:
   # Better Auth
-  "@better-auth/expo": "^1.3.4"
-  "better-auth": "^1.3.4"
+  "@better-auth/expo": "^1.3.26"
+  "better-auth": "^1.3.26"
+  "@better-auth/cli": "^1.3.26"
 
   # Dev tooling
-  eslint: ^9.19.0
-  prettier: ^3.4.2
+  eslint: ^9.21.0
+  prettier: ^3.7.4
   tailwindcss: ^3.4.15
-  typescript: ^5.9.0
-  turbo: ^2.5.5
-  "@turbo/gen": ^2.5.5
+  typescript: ^5.8.3
+  turbo: ^2.6.3
+  "@turbo/gen": ^2.6.3
 
   # Misc
   zod: ^3.25.49
   "@t3-oss/env-nextjs": ^0.13.6
+  superjson: ^2.2.6
+  "@types/node": ^22.15.0
 
   # Tanstack & tRPC
-  "@tanstack/react-query": ^5.80.7
-  "@trpc/client": ^11.4.3
-  "@trpc/tanstack-react-query": ^11.4.3
-  "@trpc/server": ^11.4.3
+  "@tanstack/react-query": ^5.90.12
+  "@trpc/client": ^11.7.2
+  "@trpc/tanstack-react-query": ^11.7.2
+  "@trpc/server": ^11.7.2
 
   # Next.js
-  next: ^15.4.5
+  next: ^15.4.8
 
   # AI SDK
-  "ai": ^5.0.8
+  "ai": ^5.0.52
   "@ai-sdk/google": ^2.0.3
 
 catalogs:
   react19:
-    react: 19.0.0
-    react-dom: 19.0.0
-    "@types/react": ~19.0.10
-    "@types/react-dom": ^19.0.0
+    react: ^19.2.1
+    react-dom: ^19.2.1
+    "@types/react": ~19.2.1
+    "@types/react-dom": ^19.2.1
