--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@flatsby/tsconfig": "workspace:*",
-    "@types/node": "^22.14.1",
+    "@types/node": "catalog:",
     "typescript": "catalog:"
   },
   "prettier": "@flatsby/prettier-config"
