--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,7 +10,8 @@ catalog:
   "@better-auth/cli": "^1.3.26"
 
   # Dev tooling
-  eslint: ^9.21.0
+  "@eslint/js": ^9.38.0
+  eslint: ^9.38.0
   prettier: ^3.7.4
   tailwindcss: ^3.4.15
   typescript: ^5.8.3
