--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -44,13 +44,13 @@
     "expo-splash-screen": "0.30.10",
     "expo-status-bar": "2.2.3",
     "expo-web-browser": "14.2.0",
-    "nativewind": "~4.1.23",
+    "nativewind": "5.0.0-preview.2",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "react-hook-form": "^7.57.0",
     "react-native": "0.79.5",
     "react-native-bottom-tabs": "^0.9.2",
-    "react-native-css-interop": "~0.1.22",
+    "react-native-css": "3.0.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "~5.4.0",
