--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -46,9 +46,10 @@
     "@types/react-dom": "catalog:react19",
     "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
-    "jiti": "^1.21.7",
+    "jiti": "^2.5.1",
     "prettier": "catalog:",
     "tailwindcss": "catalog:",
+    "tw-animate-css": "^1.4.0",
     "typescript": "catalog:"
   },
   "prettier": "@flatsby/prettier-config"
