--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,7 +13,8 @@ catalog:
   "@eslint/js": ^9.38.0
   eslint: ^9.38.0
   prettier: ^3.7.4
-  tailwindcss: ^3.4.15
+  tailwindcss: ^4.1.16
+  "@tailwindcss/postcss": ^4.1.16
   typescript: ^5.8.3
   turbo: ^2.6.3
   "@turbo/gen": ^2.6.3
