--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./native": "./native.ts",
-    "./web": "./web.ts"
+    "./theme": "./theme.css",
+    "./postcss-config": "./postcss-config.js"
   },
   "license": "MIT",
   "scripts": {
@@ -15,9 +15,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "postcss": "^8.5.1",
-    "tailwindcss": "catalog:",
-    "tailwindcss-animate": "^1.0.7"
+    "@tailwindcss/postcss": "catalog:",
+    "postcss": "^8.5.6",
+    "tailwindcss": "catalog:"
   },
   "devDependencies": {
     "@flatsby/eslint-config": "workspace:*",
