--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -28,7 +28,7 @@
     "better-auth": "catalog:",
     "geist": "^1.5.1",
     "jose": "^6.1.3",
-    "next": "catalog:",
+    "next": "^16.0.7",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "react-intersection-observer": "^9.16.0",
