--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "engines": {
     "node": ">=22.11.0",
-    "pnpm": "^9.15.4"
+    "pnpm": "^10.19.0"
   },
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
   "scripts": {
     "build": "turbo run build",
     "clean": "git clean -xdf node_modules",
