--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,9 +5,9 @@ packages:
 
 catalog:
   # Better Auth
-  "@better-auth/expo": "^1.3.26"
-  "better-auth": "^1.3.26"
-  "@better-auth/cli": "^1.3.26"
+  "@better-auth/expo": 1.4.0-beta.9
+  "@better-auth/cli": 1.4.0-beta.9
+  "better-auth": 1.4.0-beta.9
 
   # Dev tooling
   "@eslint/js": ^9.38.0
@@ -15,15 +15,13 @@ catalog:
   prettier: ^3.7.4
   tailwindcss: ^4.1.16
   "@tailwindcss/postcss": ^4.1.16
-  typescript: ^5.8.3
-  turbo: ^2.6.3
-  "@turbo/gen": ^2.6.3
+  typescript: ^5.9.3
 
   # Misc
   zod: ^4.1.12
   "@t3-oss/env-nextjs": ^0.13.8
   superjson: ^2.2.6
-  "@types/node": ^22.15.0
+  "@types/node": ^22.18.12
 
   # Tanstack & tRPC
   "@tanstack/react-query": ^5.90.12
@@ -38,9 +36,26 @@ catalog:
   "ai": ^5.0.52
   "@ai-sdk/google": ^2.0.3
 
+  turbo: ^2.6.3
+  "@turbo/gen": ^2.6.3
+
 catalogs:
   react19:
-    react: ^19.2.1
-    react-dom: ^19.2.1
-    "@types/react": ~19.2.1
-    "@types/react-dom": ^19.2.1
+    "@types/react": ~19.1.0
+    "@types/react-dom": ~19.1.0
+    react: 19.1.2
+    react-dom: 19.1.2
+
+linkWorkspacePackages: true
+
+onlyBuiltDependencies:
+  - "@tailwindcss/oxide"
+  - esbuild
+
+overrides:
+  "@types/minimatch": 5.1.2
+  lightningcss: 1.30.1
+
+publicHoistPattern:
+  - "@ianvs/prettier-plugin-sort-imports"
+  - prettier-plugin-tailwindcss
