--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -10,9 +10,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "prebuild": "expo prebuild",
-    "eas:build": "EXPO_NO_CAPABILITY_SYNC=1 eas build --profile development",
-    "eas:build:prod": "EXPO_NO_CAPABILITY_SYNC=1 eas build --profile production",
-    "eas:build:local": "EXPO_NO_CAPABILITY_SYNC=1 eas build --profile development --local",
+    "eas:build": "cross-env EXPO_NO_CAPABILITY_SYNC=1 eas build --profile development",
+    "eas:build:prod": "cross-env EXPO_NO_CAPABILITY_SYNC=1 eas build --profile production",
+    "eas:build:local": "cross-env EXPO_NO_CAPABILITY_SYNC=1 eas build --profile development --local",
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "typecheck": "tsc --noEmit"
@@ -67,6 +67,7 @@
     "@flatsby/tailwind-config": "workspace:*",
     "@flatsby/tsconfig": "workspace:*",
     "@types/react": "catalog:react19",
+    "cross-env": "^10.1.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "tailwindcss": "catalog:",
