--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@better-auth/expo": "catalog:",
     "@bottom-tabs/react-navigation": "^0.9.2",
+    "@flatsby/validators": "workspace:*",
     "@gorhom/bottom-sheet": "^5.2.8",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
