--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -53,6 +53,7 @@
     "react-native-bottom-tabs": "^0.9.2",
     "react-native-css": "3.0.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
