--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -59,13 +59,15 @@
     "react-native-css": "3.0.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-worklets": "~0.5.1",
     "superjson": "catalog:",
-    "tailwind-variants": "^1.0.0"
+    "tailwind-variants": "^1.0.0",
+    "web-streams-polyfill": "^4.1.0"
   },
   "devDependencies": {
     "@flatsby/api": "workspace:*",
