--- a/turbo.json
+++ b/turbo.json
@@ -57,8 +57,8 @@
     "APPLE_SERVICE_ID",
     "BETTER_AUTH_URL",
     "DATABASE_URL",
-    "DISCORD_CLIENT_ID",
-    "DISCORD_CLIENT_SECRET",
+    "MODEL_PROVIDER",
+    "AI_GATEWAY_API_KEY",
     "PORT"
   ],
   "globalPassThroughEnv": [
