--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,7 +4,7 @@ packages:
   - tooling/*
 
 catalog:
-  '@ai-sdk/google': ^2.0.3
+  '@ai-sdk/react': ^3.0.12
   '@better-auth/cli': 1.5.0-beta.2
   '@better-auth/expo': 1.5.0-beta.2
   '@eslint/js': ^9.38.0
@@ -16,7 +16,7 @@ catalog:
   '@trpc/tanstack-react-query': ^11.7.2
   '@turbo/gen': ^2.6.3
   '@types/node': ^22.18.12
-  ai: 5.0.117
+  ai: ^6.0.12
   better-auth: 1.5.0-beta.2
   eslint: ^9.38.0
   next: ^16.0.7
