--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -4,8 +4,8 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "../../tooling/tailwind/web.ts",
-    "css": "../../apps/nextjs/src/app/globals.css",
+    "config": "",
+    "css": "../../tooling/tailwind/theme.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
