basic payment check done

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,8 @@
     "./seasonal-theme": "./src/seasonal-theme.ts",
     "./chat-transport": "./src/chat-transport.ts",
     "./ai-elements": "./src/components/ai-elements/index.ts",
+    "./autumn/checkout-dialog": "./src/components/autumn/checkout-dialog.tsx",
+    "./autumn/pricing-table": "./src/components/autumn/pricing-table.tsx",
     "./sidebar": "./src/sidebar.tsx",
     "./skeleton": "./src/skeleton.tsx",
     "./tooltip": "./src/tooltip.tsx",
@@ -69,7 +71,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@xyflow/react": "^12.10.0",
     "ai": "catalog:",
-    "autumn-js": "^0.1.63",
+    "autumn-js": "catalog:",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
