--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -27,6 +27,7 @@
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
     "ai": "catalog:",
+    "autumn-js": "catalog:",
     "better-auth": "catalog:",
     "geist": "^1.5.1",
     "jose": "^6.1.3",
