--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -22,6 +22,7 @@
     "@flatsby/db": "workspace:*",
     "@t3-oss/env-nextjs": "catalog:",
     "ai": "catalog:",
+    "autumn-js": "catalog:",
     "better-auth": "catalog:",
     "next": "catalog:",
     "react": "catalog:react19",
