--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 
 catalog:
   '@ai-sdk/react': ^3.0.12
+  autumn-js: ^0.1.63
   '@better-auth/cli': 1.5.0-beta.2
   '@better-auth/expo': 1.5.0-beta.2
   '@eslint/js': ^9.38.0
