add AUTUMN_SECRET_KEY to turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -59,6 +59,7 @@
     "DATABASE_URL",
     "MODEL_PROVIDER",
     "AI_GATEWAY_API_KEY",
+    "AUTUMN_SECRET_KEY",
     "PORT"
   ],
   "globalPassThroughEnv": [
