--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -47,6 +47,7 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
+    "babel-plugin-react-compiler": "catalog:",
     "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "jiti": "^2.5.1",
