--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -7,6 +7,7 @@
     "clean:cache": "rm -rf node_modules/.cache",
     "dev": "expo start",
     "dev:clean": "pnpm clean:cache && expo start --clear",
+    "dev:fresh": "rm -rf node_modules/.cache .expo && expo start --clear",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "android": "expo run:android",
@@ -22,8 +23,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/react": "catalog:",
     "@better-auth/expo": "catalog:",
     "@bottom-tabs/react-navigation": "^0.9.2",
+    "@flatsby/chat": "workspace:*",
     "@flatsby/validators": "workspace:*",
     "@gorhom/bottom-sheet": "^5.2.8",
     "@hookform/resolvers": "^5.0.1",
@@ -31,10 +34,12 @@
     "@react-native-vector-icons/get-image": "^12.0.1",
     "@react-native-vector-icons/lucide": "^12.0.1",
     "@shopify/flash-list": "^2.2.0",
+    "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
+    "@ungap/structured-clone": "^1.3.0",
     "better-auth": "catalog:",
     "expo": "~54.0.20",
     "expo-build-properties": "~1.0.10",
@@ -59,7 +64,7 @@
     "react-native-css": "3.0.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
-    "react-native-polyfill-globals": "^3.1.0",
+    "react-native-marked": "^8.0.0",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
