--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,10 @@ APPLE_BUNDLE_ID=
 APPLE_SERVICE_ID=
 
 # AI Keys
-GOOGLE_GENERATIVE_AI_API_KEY=
+AI_GATEWAY_API_KEY=
+
+# Autmn
+AUTUMN_SECRET_KEY=
 
 # Vercel (optional, used to construct production URLs)
 # VERCEL_URL=
