expense splitview nextjs

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "typecheck": "turbo run typecheck",
-    "ui-add": "turbo run ui-add"
+    "ui-add": "pnpm dlx shadcn@latest add -c packages/ui"
   },
   "devDependencies": {
     "@flatsby/prettier-config": "workspace:*",
