--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,7 +39,9 @@
     "./sidebar": "./src/sidebar.tsx",
     "./skeleton": "./src/skeleton.tsx",
     "./tooltip": "./src/tooltip.tsx",
-    "./hooks/use-mobile": "./hooks/use-mobile.ts"
+    "./resizable": "./src/resizable.tsx",
+    "./hooks/use-mobile": "./hooks/use-mobile.ts",
+    "./hooks/use-media-query": "./hooks/use-media-query.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -47,7 +49,7 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
-    "ui-add": "pnpm dlx shadcn@latest add && prettier src --write --list-different"
+    "ui-add": "pnpm dlx shadcn@latest add"
   },
   "dependencies": {
     "@ai-sdk/react": "catalog:",
@@ -83,6 +85,7 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react-hook-form": "^7.57.0",
+    "react-resizable-panels": "^4.5.2",
     "shiki": "^3.20.0",
     "sonner": "^1.7.2",
     "streamdown": "^1.6.10",
