--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -42,11 +42,15 @@
     "@ungap/structured-clone": "^1.3.0",
     "better-auth": "catalog:",
     "expo": "~54.0.20",
+    "expo-application": "~7.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
+    "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.0",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.8",
     "expo-network": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
@@ -56,6 +60,8 @@
     "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.8",
     "nativewind": "5.0.0-preview.2",
+    "posthog-react-native": "^4.27.0",
+    "posthog-react-native-session-replay": "^1.2.3",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "react-hook-form": "^7.57.0",
