--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -31,6 +31,7 @@
     "@gorhom/bottom-sheet": "^5.2.8",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.6.0",
     "@react-native-vector-icons/get-image": "^12.0.1",
     "@react-native-vector-icons/lucide": "^12.0.1",
     "@shopify/flash-list": "^2.2.0",
