--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
     "./input": "./src/input.tsx",
     "./label": "./src/label.tsx",
     "./popover": "./src/popover.tsx",
+    "./calendar": "./src/calendar.tsx",
     "./scroll-area": "./src/scroll-area.tsx",
     "./select": "./src/select.tsx",
     "./separator": "./src/separator.tsx",
@@ -79,12 +80,14 @@
     "autumn-js": "catalog:",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.483.0",
     "motion": "^12.23.26",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.2",
+    "radix-ui": "^1.4.3",
+    "react-day-picker": "^9.13.0",
     "react-hook-form": "^7.57.0",
     "react-resizable-panels": "^4.5.2",
     "shiki": "^3.20.0",
