--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -50,6 +50,7 @@
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.0",
+    "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.8",
     "expo-network": "~8.0.8",
@@ -70,6 +71,7 @@
     "react-native-bottom-tabs": "^0.9.2",
     "react-native-css": "3.0.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.73",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-marked": "^8.0.0",
     "react-native-reanimated": "~4.1.3",
