--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -74,6 +74,8 @@
     "react-native-gifted-charts": "^1.4.73",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-marked": "^8.0.0",
+    "react-native-purchases": "^9.7.6",
+    "react-native-purchases-ui": "^9.7.6",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
